Mostly done replicating template classes: - Swapped out CustomMovementComponent with OPMovementComponent in the proper base character class (just for testing really) - Introduced more events into CustomMovement, only one which is contained within the movement update loop (was just for replicating template classes) - Minor marked changes that are temporary within the while loop - Documenting changes of template classes not relevant since i'm gonna throw 'em out later
Bugs:
- HandleVelocityProjection needs some rethinking, commenting it out removes the stutter and other issues when approaching obstructions but I recall needing it for the skating stuff. I think this mixture of SlideAlongSurface & HandleVelocityProjection are the ones causing the issues of stutter and wacky movement as that only consistently happens on obstructions
- Penetration or overlap adjustments need some more. Even commenting out the above, walking into an obstruction there's a slight "lift". Similarly for *small* steps, it just naturally climbs them

--- a/CoreFramework/CoreFramework.uplugin
+++ b/CoreFramework/CoreFramework.uplugin
@@ -1,7 +1,7 @@
 {
 	"FileVersion": 3,
 	"Version": 1,
-	"VersionName": "1.0",
+	"VersionName": "0.6b",
 	"FriendlyName": "CoreFramework",
 	"Description": "Core gameplay framework containing a versatile movement component, a generic character class, and an input buffered player controller.",
 	"Category": "Other",
@@ -11,7 +11,7 @@
 	"MarketplaceURL": "",
 	"SupportURL": "",
 	"CanContainContent": true,
-	"IsBetaVersion": false,
+	"IsBetaVersion": true,
 	"IsExperimentalVersion": false,
 	"Installed": false,
 	"Modules": [
@@ -19,6 +19,12 @@
 			"Name": "CoreFramework",
 			"Type": "Runtime",
 			"LoadingPhase": "Default"
+		}
+	],
+	"Plugins": [
+		{
+			"Name": "EnhancedInput",
+			"Enabled": true
 		}
 	]
 }
