--- a/CoreFramework/CoreFramework.uplugin
+++ b/CoreFramework/CoreFramework.uplugin
@@ -1,7 +1,7 @@
 {
 	"FileVersion": 3,
 	"Version": 1,
-	"VersionName": "0.9b",
+	"VersionName": "1.0",
 	"FriendlyName": "CoreFramework",
 	"Description": "Core gameplay framework containing a versatile movement component, a generic character class, and an input buffered player controller.",
 	"Category": "Other",
@@ -11,7 +11,7 @@
 	"MarketplaceURL": "",
 	"SupportURL": "",
 	"CanContainContent": true,
-	"IsBetaVersion": true,
+	"IsBetaVersion": false,
 	"IsExperimentalVersion": false,
 	"Installed": false,
 	"Modules": [
