--- a/CoreFramework/CoreFramework.uplugin
+++ b/CoreFramework/CoreFramework.uplugin
@@ -1,30 +1,39 @@
 {
-	"FileVersion": 3,
-	"Version": 1,
-	"VersionName": "1.0",
-	"FriendlyName": "CoreFramework",
-	"Description": "Core gameplay framework containing a versatile movement component, a generic character class, and an input buffered player controller.",
-	"Category": "Other",
-	"CreatedBy": "Abdulrahmen Almodaimegh",
-	"CreatedByURL": "",
-	"DocsURL": "",
-	"MarketplaceURL": "",
-	"SupportURL": "",
-	"CanContainContent": true,
-	"IsBetaVersion": false,
-	"IsExperimentalVersion": false,
-	"Installed": false,
-	"Modules": [
-		{
-			"Name": "CoreFramework",
-			"Type": "Runtime",
-			"LoadingPhase": "Default"
-		}
-	],
-	"Plugins": [
-		{
-			"Name": "EnhancedInput",
-			"Enabled": true
-		}
-	]
+  "FileVersion": 3,
+  "Version": 1,
+  "VersionName": "1.0",
+  "FriendlyName": "CoreFramework",
+  "Description": "Core gameplay framework containing a versatile movement component, a generic character class, and an input buffered player controller.",
+  "Category": "Other",
+  "CreatedBy": "Abdulrahmen Almodaimegh",
+  "CreatedByURL": "",
+  "DocsURL": "",
+  "MarketplaceURL": "",
+  "SupportURL": "",
+  "CanContainContent": true,
+  "IsBetaVersion": false,
+  "IsExperimentalVersion": false,
+  "Installed": false,
+  "Modules": [
+    {
+      "Name": "CoreFramework",
+      "Type": "Runtime",
+      "LoadingPhase": "PreDefault"
+    },
+    {
+      "Name": "ActionFramework",
+      "Type": "Runtime",
+      "LoadingPhase": "PreDefault"
+    }
+  ],
+  "Plugins": [
+    {
+      "Name": "EnhancedInput",
+      "Enabled": true
+    },
+    {
+      "Name": "SMSystem",
+      "Enabled": true
+    }
+  ]
 }
