AI Implementation, Input Buffer Priority, And Gameplay Events
AI Implementation:
- Basic AI Navigation now implemented in movement component
- RVO still not done, but otherwise AI basically complete
- TODO: Maths for braking deceleration during pathfinding

Root Motion Sources (WIP):
- Introducing an option to perform the RM Task either in world space or in local space (when evaluating path offset curves)
- Now its just hardcoded while I was testing, still not done

CFW Statics:
- Just a blueprint library for some base functionality. Currently only has GetRadicalPlayer which is meant to be equivalent to GetPlayerCharacter

Input Buffer Subsystem:
- Now can set priorities when binding to events, and the event of a certain input will stop being invoked if it was already consumed by a higher priority binding
- Function to check if an input has been consumed

Movement Data (WIP):
- Now added curve modifiers to each relevant field (e.g friction). Curves are evaluated by CurrentSpeed/MaxSpeed. Curves represent a multiplier to that value (1 = dont change, 0.1 = 0.1 OriginalValue)
- Some more rotation options (e.g InputOnlyRotatesWhenFalling which just rotates the pawn about their up axis with move input when theyre in falling rather than try to move them)

MovementComponent (Other than AI implementation):
- Some more debug visualizers. One to visualize trajectories, and one to visualize acceleration curves. Visualizing trajectories can also show you the trajectory of any given bone by setting the TrajectoryBone FName member

RadicalCharacter:
- JumpApexReached event, not invoked anywhere here, meant to be called in however your jump implementation is done.

--- a/CoreFramework/CoreFramework.uplugin
+++ b/CoreFramework/CoreFramework.uplugin
@@ -23,6 +23,11 @@
     {
       "Name": "ActionFramework",
       "Type": "Runtime",
+      "LoadingPhase": "Default"
+    },
+    {
+      "Name": "EditorUtilities",
+      "Type": "UncookedOnly",
       "LoadingPhase": "PreDefault"
     }
   ],
