--- a/CoreFramework/CoreFramework.uplugin
+++ b/CoreFramework/CoreFramework.uplugin
@@ -44,6 +44,10 @@
     {
       "Name": "SMSystem",
       "Enabled": true
+    },
+    {
+      "Name": "GameplayAbilities",
+      "Enabled": true
     }
   ]
 }
